--- a/src/index.html
+++ b/src/index.html
@@ -3,90 +3,293 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alpine.js & Tailwind CSS Example</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <title>Dit Dah Dah</title>
+    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <script src="https://kit.fontawesome.com/95ffa18c94.js" crossorigin="anonymous"></script>
+    <script src="https://fkurz.net/ham/jscwlib/src/jscwlib.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/pocketbase/0.8.0-rc1/pocketbase.umd.js"
+      integrity="sha512-rXvsONe8nnMbEMubzO3Oj1mXbromnFXo7jtDekeUJ4ZJ1UuJTc/HZ7qgTLw8oL6vdfxy3NL35slBflsaEwUhpw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!-- <script src="https://cdn.jsdelivr.net/gh/itaypanda/simpletoast@master/SimpleToast.min.js"></script> -->
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <style>
       [x-cloak] {
         display: none;
       }
     </style>
   </head>
-  <body class="bg-gray-200">
-    <div x-data="{ currentPage: 'Learn', open: false}" x-cloak>
-      <div
-        class="w-full text-gray-700 bg-white dark-mode:text-gray-200 dark-mode:bg-gray-800"
-      >
-        <div
-          class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8"
-        >
-          <div class="p-4 flex flex-row items-center justify-between">
-            <a
-              href="#"
-              class="text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg dark-mode:text-white focus:outline-none focus:shadow-outline"
-            >
-              <img
-                src="./logo.svg"
-                alt="triangle with all three sides equal"
-                class="h-12 w-auto"
-              />
-            </a>
-            <button
-              class="md:hidden rounded-lg focus:outline-none focus:shadow-outline"
-              @click="open = !open"
-            >
-              <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6">
-                <path
-                  x-show="!open"
-                  fill-rule="evenodd"
-                  d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
-                  clip-rule="evenodd"
-                ></path>
-                <path
-                  x-show="open"
-                  fill-rule="evenodd"
-                  d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                  clip-rule="evenodd"
-                ></path>
-              </svg>
-            </button>
+  <body class="bg-gray-50 light-mode">
+    <div x-data="state" x-cloak x-transition>
+      <nav class="bg-white shadow-lg">
+        <div class="max-w-5xl mx-auto px-4">
+          <div class="flex justify-between items-center h-16">
+            <!-- Logo on the far left -->
+            <div class="flex-shrink-0">
+              <img src="./logo.svg" alt="triangle with all three sides equal" class="h-12 w-auto cursor-pointer" @click="currentPage = 'Learn'" />
+            </div>
+            <!-- Buttons on the far right -->
+            <div class="flex items-center justify-center space-x-4">
+              <a
+                class="cursor-pointer px-4 py-2 mt-2 text-sm font-semibold rounded-lg dark-mode:bg-transparent dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 focus:outline-none focus:shadow-outline"
+                :class="{ 'bg-gray-200 text-gray-900': currentPage === 'Learn', 'text-gray-900': currentPage !== 'Learn' }"
+                @click="currentPage = 'Learn'"
+                href="#Learn"
+                >Learn</a
+              >
+
+              <a
+                class="cursor-pointer px-4 py-2 mt-2 text-sm font-semibold rounded-lg dark-mode:bg-transparent dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 focus:outline-none focus:shadow-outline"
+                :class="{ 'bg-gray-200 text-gray-900': currentPage === 'Account', 'text-gray-900': currentPage !== 'Account' }"
+                @click="currentPage = 'Account'"
+                href="#Account"
+              >
+                <i class="fa-user" :class="{ 'filled fas': !showLogin, 'far': showLogin}"></i>
+              </a>
+
+              <a
+                class="cursor-pointer px-4 py-2 mt-2 text-sm font-semibold rounded-lg dark-mode:bg-transparent dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 focus:outline-none focus:shadow-outline"
+                @click="logout()"
+                x-show="!showLogin"
+                x-transition
+              >
+                <i class="fas fa-right-from-bracket"></i>
+              </a>
+            </div>
           </div>
-          <nav
-            :class="{'flex': open, 'hidden': !open}"
-            class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row"
-          >
-            <a
-              class="cursor-pointer px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 focus:outline-none focus:shadow-outline"
-              :class="{ 'bg-gray-200 text-gray-900': currentPage === 'Learn', 'text-gray-900': currentPage !== 'Learn' }"
-              @click="currentPage = 'Learn'"
-              >Learn</a
-            >
-            <a
-              class="cursor-pointer px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 focus:outline-none focus:shadow-outline"
-              :class="{ 'bg-gray-200 text-gray-900': currentPage === 'Stats', 'text-gray-900': currentPage !== 'Stats' }"
-              @click="currentPage = 'Stats'"
-              >Stats</a
-            >
-          </nav>
         </div>
+      </nav>
+
+      <div
+        x-show="showSMessage"
+        id="toast-success"
+        class="fixed mt-2 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800"
+        role="alert"
+        x-transition
+      >
+        <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200">
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
+          </svg>
+          <span class="sr-only">Check icon</span>
+        </div>
+        <div class="ms-3 text-sm font-normal" x-text="SMessage">Success</div>
+        <button
+          type="button"
+          class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+          data-dismiss-target="#toast-success"
+          aria-label="Close"
+        >
+          <span class="sr-only">Close</span>
+          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+          </svg>
+        </button>
       </div>
 
-      <div x-show="currentPage === 'Learn'">
-        <h1 class="text-2xl font-bold mt-8">Learn Page</h1>
-        <p>Welcome to the Home Page</p>
+      <div
+        x-show="showEMessage"
+        id="toast-danger"
+        class="fixed mt-2 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800"
+        role="alert"
+        x-transition
+      >
+        <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+            <path
+              d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"
+            />
+          </svg>
+          <span class="sr-only">Error icon</span>
+        </div>
+        <div class="ms-3 text-sm font-normal" x-text="EMessage">Error</div>
+        <button
+          type="button"
+          class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+          data-dismiss-target="#toast-danger"
+          aria-label="Close"
+        >
+          <span class="sr-only">Close</span>
+          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+          </svg>
+        </button>
       </div>
 
-      <div x-show="currentPage === 'Stats'">
-        <h1 class="text-2xl font-bold mt-8">Stats Page</h1>
-        <p>About Us</p>
+      <div
+        x-show="currentPage === 'Learn'"
+        x-transition:enter="transition ease-out duration-300"
+        x-transition:enter-start="opacity-0"
+        x-transition:enter-end="opacity-100"
+        class="flex justify-center max-w-4xl mx-auto px-4 flex-col space-y-8 items-center"
+      >
+        <div class="flex flex-row mt-8 space-x-4 w-3/4 items-center">
+          <div class="flex flex-col w-full">
+            <!-- Label for Character Set -->
+            <label for="charSet" class="mb-1">Character Set:</label>
+
+            <div class="flex items-center mb-1 ml-1">
+              <input type="checkbox" id="letters" name="letters" class="mr-2" checked x-model="isChecked.numbers" @change="updateCharacterList()" />
+              <label for="letters">Numbers</label>
+            </div>
+
+            <div class="flex items-center mb-1 ml-1">
+              <input type="checkbox" id="numbers" name="numbers" class="mr-2" x-model="isChecked.symbols" @change="updateCharacterList()" />
+              <label for="numbers">Symbols</label>
+            </div>
+          </div>
+
+          <div class="flex flex-col space-y-4">
+            <!-- Speed Slider -->
+            <div class="flex items-center justify-between">
+              <label for="speed" class="mr-4">Speed</label>
+              <input type="range" id="speed" name="speed" min="25" max="100" value="25" class="slider appearance-none w-32 h-4 rounded-lg bg-gray-300 outline-none" />
+            </div>
+
+            <!-- Tone Slider -->
+            <div class="flex items-center justify-between">
+              <label for="tone" class="mr-4">Tone</label>
+              <input type="range" id="tone" name="tone" min="500" max="1500" value="50" class="slider appearance-none w-32 h-4 rounded-lg bg-gray-300 outline-none" />
+            </div>
+          </div>
+        </div>
+        <canvas id="characterChart"></canvas>
+      </div>
+
+      <div x-show="currentPage === 'Account'" x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100" class="flex justify-center">
+        <div x-show="!showLogin">
+          <div class="text-center pt-10">
+            <h1 class="text-3xl font-bold mb-4">ACCOUNT</h1>
+            <p class="text-gray-600">This content is centered horizontally on the page.</p>
+            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">Click Me</button>
+          </div>
+        </div>
+        <div x-show="showLogin">
+          <section class="bg-white rounded-md">
+            <div class="container flex items-center justify-center px-6 mx-auto mt-10">
+              <form class="w-full max-w-md">
+                <div class="flex justify-center mx-auto">
+                  <!-- <img class="w-auto h-7 sm:h-8" src="https://merakiui.com/images/logo.svg" alt="" /> -->
+                </div>
+
+                <mark x-show="loginMessage" x-text="loginMessage"></mark>
+
+                <div class="flex items-center justify-center mt-6">
+                  <a @click="onSignInPage = true" class="cursor-pointer w-1/3 pb-4 font-medium text-center text-gray-500 capitalize border-b" :class="{'border-blue-500 border-b-2 text-gray-800' : onSignInPage}">
+                    sign in
+                  </a>
+
+                  <a @click="onSignInPage = false" class="cursor-pointer w-1/3 pb-4 font-medium text-center text-gray-500 capitalize border-b" :class="{'border-blue-500 border-b-2 text-gray-800' : !onSignInPage}">
+                    sign up
+                  </a>
+                </div>
+
+                <div class="relative flex items-center mt-4" x-show="!onSignInPage">
+                  <span class="absolute">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mx-3 text-gray-300" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                    </svg>
+                  </span>
+
+                  <input
+                    type="text"
+                    class="block w-full px-10 py-3 text-gray-700 bg-white border rounded-lg focus:border-blue-400 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40"
+                    placeholder="Username"
+                    x-bind:required="onSignInPage ? null : 'required'"
+                    x-model="username"
+                  />
+                </div>
+
+                <div class="relative flex items-center mt-6">
+                  <span class="absolute">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mx-3 text-gray-300" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                    </svg>
+                  </span>
+
+                  <input
+                    type="email"
+                    x-model="email"
+                    class="block w-full py-3 text-gray-700 bg-white border rounded-lg px-11 focus:border-blue-400 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40"
+                    placeholder="Email address"
+                    required
+                  />
+                </div>
+
+                <div class="relative flex items-center mt-4">
+                  <span class="absolute">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mx-3 text-gray-300" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
+                    </svg>
+                  </span>
+
+                  <input
+                    type="password"
+                    class="block w-full px-10 py-3 text-gray-700 bg-white border rounded-lg focus:border-blue-400 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40"
+                    placeholder="Password"
+                    x-model="password"
+                    required
+                  />
+                </div>
+
+                <div class="relative flex items-center mt-4" x-show="!onSignInPage">
+                  <span class="absolute">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mx-3 text-gray-300" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
+                    </svg>
+                  </span>
+
+                  <input
+                    type="password"
+                    class="block w-full px-10 py-3 text-gray-700 bg-white border rounded-lg focus:border-blue-400 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40"
+                    placeholder="Confirm Password"
+                    x-bind:required="onSignInPage ? null : 'required'"
+                    x-model="passwordConfirm"
+                  />
+                </div>
+
+                <div class="mt-6 mb-2" x-show="onSignInPage">
+                  <button
+                    @click="login()"
+                    class="w-full px-4 py-3 text-md font-medium tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50"
+                  >
+                    Sign In
+                  </button>
+
+                  <div class="mt-6 text-center">
+                    <a @click="onSignInPage = false" class="cursor-pointer text-sm text-blue-500 hover:underline"> Don't have an account? </a>
+                  </div>
+                </div>
+
+                <div class="mt-6 mb-2" x-show="!onSignInPage">
+                  <button
+                    @click="signup()"
+                    class="w-full px-6 py-3 text-md font-medium tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50"
+                  >
+                    Sign Up
+                  </button>
+
+                  <div class="mt-6 text-center">
+                    <a @click="onSignInPage = true" class="cursor-pointer text-sm text-blue-500 hover:underline"> Already have an account? </a>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </section>
+        </div>
       </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js"
-      defer
-    ></script>
+    <script src="buttonsAndSliders.js"></script>
+    <script src="test.js"></script>
+    <!-- <script src="pageHistory.js"></script> -->
+    <script src="pocket.js"></script>
   </body>
 </html>
