--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <div class="w-full flex justify-center mt-4">
           <input
             type="text"
-            id="userKeyInput"
+            id="answerBox"
             placeholder="Click here"
             autocomplete="off"
-            class="input max-w-xs w-full" />
+            class="input input-bordered max-w-xs w-full" />
         </div>
       </div>
       <div id="stats" class="transition-opacity duration-500 opacity-0 hidden">
@@ -141,5 +141,6 @@
       </div>
     </div>
   </body>
+  <script src="allCharsDef.js"></script>
   <script src="script.js"></script>
 </html>
