--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="flex flex-col space-y-6">
           <div>
             <h3 class="text-xl font-semibold text-center">
-              Average Response Time
+              Average Response Time (ms)
             </h3>
             <div class="h-80">
               <canvas id="responseTimeChart" class="width-full"></canvas>
